welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:14: error: '(' expected but identifier found.
	{if cb <7 {y = cb}
            ^